<resources>
    <string name="app_name">INTIME</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_info_tv">정보</string>
    <string name="fragment_sos_tv">SOS</string>
    <string name="setting">설정</string>
    <string name="info_message">예상치 못한 상황, \n인타임으로 미리 대비하세요</string>
    <string name="how_to_aed">자동심장충격기사용법</string>
    <string name="how_to_cpr">심폐소생술</string>
    <string name="how_to_disaster">재난상황대처법</string>
    <string name="how_to_checklist">체크리스트</string>
    <string name="all">전체</string>
    <string name="aed">심장충격기</string>
    <string name="shelter">대피소</string>
    <string name="emergency">응급실</string>
    <string name="pharmacy">24시 약국</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="back">뒤로가기</string>
    <string name="info_aed_title">자동심장충격기(AED)</string>
    <string name="info_aed_description">자동심장충격기(AED)란 환자들에게 극히 짧은 순간에 강한 전류를 심장에 통과시켜서 심장이 다시 정상적인 전기활동을 할 수 있도록 유도하는 것</string>
    <string name="info_aed_picture">iv_aed_picture</string>
    <string name="info_iv_bar_design">iv_bar_design</string>
    <string name="info_aed_subtitle">자동심장충격기(AED) 사용법</string>
    <string name="info_iv_aed_desc_number">info_iv_aed_desc_number</string>
    <string name="info_tv_aed_step1_header">전원켜기</string>
    <string name="info_tv_aed_step1">자동심장충격기(AED)를 심폐소생술에 방해가 되지 않는 위치에 놓은 뒤에 전원 버튼을 눌러 전원을 켠다.</string>
    <string name="info_tv_aed_step2_header">패드 부착</string>
    <string name="info_tv_aed_pad_desc">패드1 : 오른쪽 빗장뼈 바로 아래 부착 \n패드2 : 왼쪽 젖꼭지 옆 겨드랑이 부착</string>
    <string name="info_tv_aed_step2">준비된 자동심장충격기(AED)의 패드를 부착부위에 정확히 부착한다.</string>
    <string name="info_tv_aed_step2warning_header">패드 부착 시 주의사항</string>
    <string name="info_tv_aed_step2warning1">
        • 패드와 자동심장충격기 본체가 분리되어 있는 경우 연결하며, 패드 부착부위에 이물질이 있다면 제거한다.
    </string>
    <string name="info_tv_aed_step2warning2">
        • "분석 중...." 이라는 음성 지시가 나오면 심폐소생술을 멈추고 환자에게서 손을 뗀다.
    </string>
    <string name="info_tv_aed_step2warning3">
        • 자동심장충격이 필요 없는 경우에는 "환자의 상태를 확인하고, 심폐소생술을 계속 하십시오" 라는 음성 지시가 나온다.
    </string>
    <string name="info_tv_aed_step2warning4">
        • 쇼크버튼을 누르기 전에는 반드시 다른 사람이 환자에게서 떨어져 있는지 확인하여야 한다.
    </string>
    <string name="info_tv_aed_step3_header">심폐소생술 실시</string>
    <string name="info_iv_aed_compression_picture">info_iv_aed_compression_picture</string>
    <string name="info_tv_aed_step3">자동심장충격을 시행한 뒤에는 즉시 가슴압박과 인공호흡 비율을 30 : 2로 심폐소생술을 다시 시행한다.</string>
    <string name="info_tv_cpr_clickable">심폐소생술 방법 바로 알아보기 ></string>
    <string name="info_tv_aed_step3reminder">* 자동심장충격기는 2분마다 심장리듬 분석을 반복해서 시행하며, 자동심장충격기 사용과 심폐소생술 시행은 119구급대가 현장에 도착할 때까지 지속되어야 한다.</string>
    <string name="info_iv_copyright">2013©All rights Reserved National Emergency Medical Center</string>
    <string name="sos_txt_select_num">긴급 문자를 전송할 번호를 선택해 주세요</string>
    <string name="sos_txt_sms">다음과 같이 긴급 문자를 보냅니다</string>
    <string name="sos_txt_amb">민간 구급차가 필요하신가요?</string>
    <string name="sos_btn_119">119</string>
    <string name="sos_btn_112">112</string>
    <string name="sos_btn_fav">비상연락처</string>
    <string name="sos_img_sms">긴급문자</string>
    <string name="sos_btn_amb">서울시 민간 구급차 업체 번호</string>
    <string name="sos_amb_notice">\'인타임\'은 정보 중개자로 업체 전화 후 관련된 문제에 대한 의무와 책임은 각 업체에 있으며, 민간 구급차를 이용하면 금액이 부과됩니다. 이용 시 부과되는 이용료는 담당 업체마다 상이합니다.</string>
    <string name="sos_amb_tel">전화걸기</string>
    <string name="sos_amb_title">서울시 민간 구급차 업체 정보</string>
    <string name="call">전화하기</string>
    <string name="findPath">길찾기</string>
    <string name="bookmark">즐겨찾기</string>
    <string name="emptyAedResult">내 주변에 심장충격기가 없습니다</string>
    <string name="setting_sub">인타임 관리</string>
    <string name="setting_con">비상연락처</string>
    <string name="setting_fav">즐겨찾기</string>
    <string name="setting_plus">연락처 추가</string>
    <string name="setting_add_con">비상연락처 등록</string>
    <string name="setting_sms_con">대표연락처</string>
    <string name="setting_add_con_no">긴급 문자를 보낼 \n비상 연락처를 등록해 주세요.</string>
    <string name="info_iv_cpr_desc_numbering">info_iv_cpr_desc_numbering</string>
    <string name="info_tv_cpr_step1_header">의식확인</string>
    <string name="info_iv_cpr_step1">info_iv_cpr_step1</string>
    <string name="info_tv_cpr_step1_1">양어깨를 두르리며 말을 걸고 눈과 귀로 심정지 및 무호흡 유무를 확인한다.</string>
    <string name="info_tv_cpr_step1_2">반응과 호흡이 있으면 심정지 아님</string>
    <string name="info_tv_cpr_step2">주변사람에게(꼭 집어서) 119신고를 부탁하고 자동심장충격기를 요청한다.</string>
    <string name="info_tv_cpr_step3_header">흉부압박점 찾기</string>
    <string name="info_iv_cpr_step3">info_iv_cpr_step3</string>
    <string name="info_iv_cpr_step2">info_iv_cpr_step2</string>
    <string name="info_tv_cpr_step2_header">도움 및 119신고 요청</string>
    <string name="info_tv_cpr_step1_3">일반 구조자가 외상환자를 구조할 때에는 꼭 필요한 경우에만 환자를 이동시키도록 한다. \n예) 건물에 화재가 발생한 경우 등 현장이 안전하지 않은 상황</string>
    <string name="info_tv_cpr_step3_1">먼저 환자의 가슴뼈의 아래쪽 1/2중앙 에 한 손바닥을 올려 놓고 그 위에 다른 손을 겹친다.</string>
    <string name="info_tv_cpr_step3_2">* 손가락이 가슴에 닿지 않도록 주의</string>
    <string name="info_tv_cpr_step4_header">가슴(흉부)압박하기</string>
    <string name="info_iv_cpr_step4">info_iv_cpr_step4</string>
    <string name="info_tv_cpr_step4">분당 100 ~ 120회의 속도로, 성인 약 5cm 깊이로 압박, 압박과 이완의 시간은 같은 정도로 하고, 각각의 압박 후에는 가슴이 완전히 올라오도록 해야 한다.</string>
    <string name="info_tv_cpr_step4_2">* 압박 시 양팔을 쭉 편 상태에서 체중을 실어서 환자의 몸과 수직이 되게 눌러줘야 한다.</string>
    <string name="info_tv_cpr_step5_header">인공호흡 2회 시행</string>
    <string name="info_iv_cpr_step5">info_iv_cpr_step5</string>
    <string name="info_tv_cpr_step5">먼저 머리를 젖혔던 손의 엄지와 검지로 환자의 코를 잡아 막는다.\n 코를 막고 구조자의 입을 완전히 밀착하여 정상호흡을 약 1초 동안 2회 숨을 불어 넣는다.\n (인공호흡이 어려울 경우 가슴압박을 지속적으로 시행)</string>
    <string name="info_tv_cpr_step6_header">가슴(흉부)압박과 인공호흡의 반복</string>
    <string name="info_tv_cpr_step6">이후에는 30회의 가슴압박과 2회의 인공호흡을 119구급대원이 현장에 도착할 때까지 반복해서 시행한다.</string>
    <string name="info_tv_cpr_caution_header">주의사항</string>
    <string name="info_tv_cpr_caution">인공호흡을 할 수 있는 일반인만 인공호흡을 시행해야 한다. 일반인인 경우, 가슴압박 소생술만 진행해도 된다.</string>
    <string name="info_iv_cpr_summary_adult">info_iv_cpr_summary_adult</string>
    <string name="info_tv_cpr_headline">심폐소생술 가이드라인</string>
    <string name="info_tv_cpr_desc">위급상황시 ‘인타임’을 \n만들어 줄 수 있는 CPR 방법을 확인하세요!</string>
    <string name="info_tb_adult">성인</string>
    <string name="info_tb_child">소아</string>
    <string name="info_tv_cpr_child_step1H">심정지 확인 후 도움 및 119 신고요청</string>
    <string name="info_tv_cpr_child_step1_1">어깨를 흔들며 반응을 확인한다.</string>
    <string name="info_tv_cpr_child_step1_2">* 1세 미만의 영아의 경우 발바닥을 때려 반응을 확인한다.</string>
    <string name="info_tv_cpr_child_step1_3">반응이 없는 경우 주변에 사람에게 119 호출 및 자동심장충격기를 가져올 것을 요청한다.</string>
    <string name="info_tv_cpr_child_step1_4">* 혼자인 경우 1분간 심폐소생술 시행 후 응급기관에 연락한다.</string>
    <string name="info_tv_cpr_child_step2H">가슴압박 30회 실시</string>
    <string name="info_iv_cpr_child_step2">info_iv_cpr_child_step2</string>
    <string name="info_tv_cpr_summaryH">성인 가슴압박 소생술 응급처치</string>
    <string name="info_tv_cpr_summary1">가슴(흉부)압박 \n흉골 1/2아래 부분을 손꿈치로 30회 압박한다.\n\n 성인은 5~6cm의 깊이로, 팔꿈치가 굽지 않게 옆에서 보았을때 90도가 될 수 있도록 압박한다. \n\n* 분당 100 ~ 120회의 속도로 가슴압박을 시행한다.</string>
    <string name="info_tv_cpr_summary2H">적절한 가슴압박과 이완을 하는 이유</string>
    <string name="info_tv_cpr_summary2">정확한 깊이로 가슴압박을 강하게 하면, 그만큼 피가 많이 짜여지게 되고, 압박한 만큼 이완시키면 다시 심장에 피가 되돌아오기 때문에 조금 더 효율적인 가슴압박이 이루어 질 수 있다.</string>
    <string name="info_cpr_child_step2_1">•  압박할 위치는 양쪽 젖꼭지 부위를 잇는 선의 정중앙의 바로 아래부분이다.</string>
    <string name="info_cpr_child_step2_2">•  한 손으로 손바닥의 아래 부위만을 환자의 흉골부위에 접촉시킨다.</string>
    <string name="info_cpr_child_step2_3">•  시술자의 어깨는 환자의 흉골이 맞닿는 부위와 수직이 되게 위치한다.</string>
    <string name="info_cpr_child_step2_4">•  한 손으로 1분당 100 ~ 120회 이상의 속도와 4 ~ 5cm 이상 깊이로 강하고 빠르게 30회 눌러준다.</string>
    <string name="info_tv_cpr_step3H">영아에서의 흉부압박</string>
    <string name="info_tv_cpr_child_step3">info_tv_cpr_child_step3</string>
    <string name="info_cpr_child_step3_1">•  압박할 위치는 양쪽 젖꼭지 부위를 잇는 선 정 중앙의 바로 아래 부분이다.</string>
    <string name="info_cpr_child_step3_2">•  검지와 중지 또는 중지와 약지 손가락을 모은 후 첫마디 부위를 환자의 흉골부위에 접촉시킨다.</string>
    <string name="info_cpr_child_step3_3">•  시술자의 손가락은 환자의 흉골이 맞닿는 부위와 수직이 되게 위치한다.</string>
    <string name="info_cpr_child_step3_4">•  1분당 100 ~ 120회 이상의 속도와 4cm 정도의 깊이로 강하고 빠르게 30회 눌러준다.</string>
    <string name="info_tv_cpr_child_step4H">인공호흡 2회 실시</string>
    <string name="info_tv_cpr_child_step4_1">호흡이 없으면 환아의 기도를 유지한채 1초 간 구조호흡을 한다. \n\n가슴이 올라 오는 정도를 본다. \n\n2회 연속 시행한다.</string>
    <string name="info_tv_cpr_child_step4_2">* 소아의 경우 입 대 입, 영아(1세 미만)의 경우 입으로 입과 코를 막고 호흡을 한다.</string>
    <string name="info_tv_cpr_child_step5H">가슴압박과 인공호흡을 반복</string>
    <string name="info_tv_cpr_child_step5">30회의 가슴압박과 2회의 인공호흡을 119구급대원이 도착할 때까지 반복하여 시행한다.</string>
    <string name="info_tb_earthquake">지진 Earthquake 地震</string>
    <string name="info_tb_typhoon">태풍 Typhoon 颱風</string>
    <string name="info_tb_flood">홍수 Flood 洪水</string>
    <string name="info_tb_forrestfire">산불 Wildfire 山火</string>
    <string name="info_tb_fire">화재 Urban Fire 火災</string>
    <string name="info_tv_wheninside">집안에 있을 경우</string>
    <string name="info_tv_earthquake_subtitle">머리, 몸을 보호하는 것이 중요</string>
    <string name="info_tv_earthquake_body">떨어지는 낙하물을 최대한 피할 수 있도록 튼튼한 <b>탁자 아래</b>에 들어가서 탁자 다리를 꼭 잡고 몸을 보호합니다.\n\n
        흔들림이 멈추면 <b>가스와 전깃불을 차단</b>하고 문을 열어 <b>출구를 확보</b>한 후 (계단을 이용하여) 밖으로 나갑니다. (엘리베이터 사용 금지)\n\n
        바깥에서 손이나 가방 등으로 머리를 보호하며, <b>운동장, 공원 등 넓은 공간으로 대피</b>합니다.\n\n
        대피 장소에 도착한 후 라디오나 공공기관 등 <b>안내 방송</b>에 따라 행동합니다.</string>
    <string name="info_tv_whenoutside">바깥에 있을 경우</string>
    <string name="info_tv_earthquake_body2">1. 창문유리, 간판 등 낙하물을 주의하며 손이나 가방 등으로 머리를 보호합니다.\n\n
        2. 가능한 한 건물로부터 멀리 떨어져 흔들림이 멈추면 운동장, 공원 등 넓은 공간으로 대피합니다.\n\n
        3. 대피 장소에 도착한 후 라디오나 공공기관 등 안내 방송에 따라 행동합니다.</string>
    <string name="info_tv_whenoccur">발생시</string>
    <string name="info_tv_typhoon_body">1. 태풍이 불 때는 <b>외출을 최대한 삼가</b>고 집에 있습니다.\n\n
        2. 정전 시는 사용 가능한 <b>손전등</b>을 준비하고 가족 간의 <b>비상연락방법</b>과 대피 방법을 미리 의논합니다.\n\n
        3. 침수가 예상되는 건물의 <b>지하공간에는 주차하지 마시고</b>, 지하에 거주하고 계신 주민은 안전한 곳으로 대피합니다.\n\n
        4. 건물의 간판, 전신주, 가로등 등 위험 시설물 주변으로 걸어가거나 접근하지 맙시다. 또한, 집 안팎의 전기수리를 하지 않습니다.\n\n
        5. 아파트 등 고층건물 옥상, 지하실과 하수도 맨홀에 접근하지 않습니다. \n\n
        6. 고층아파트 등 대형건물에 거주하고 계신 주민은 유리창이 깨지는 것을 방지하도록 젖은 신문지, 테이프 등을 창문에 붙이고 창문 가까이 접근하지 않습니다. \n\n
        7. 모래주머니 등을 이용하여 물이 넘쳐서 흐르는 것을 막습니다. \n\n
        8. 바람에 날아갈 물건이 집주변에 있다면 미리 제거합니다. \n\n
        9. 도로에 있는 차량은 속도를 줄여서 운전합니다. \n\n
        10. 태풍이 지나간 후 침수된 집안은 가스가 차 있을 수 있으니 환기한 후 들어가고 전기, 가스, 수도시설 안전점검을 받은 후 사용합니다.</string>
    <string name="info_tv_flood_body">•  홍수피해가 예상될 경우 라디오나 TV, 인터넷을 통해 <b>기상변화</b>를 알아둡니다.\n\n
        •  홍수 예상 시 <b>전기차단기</b>를 내리고 <b>가스 밸브</b>를 잠급니다.\n\n
        •  홍수 우려 때 <b>피난</b> 가능한 <b>장소</b>와 <b>길</b>을 사전에 알아둡니다.\n\n
        •  갑작스러운 홍수가 발생 시 <b>높은 곳</b>으로 신속하게 대피합니다.\n\n
        •  바위나 자갈 등이 흘러내리기 쉬운 지역이나 <b>산사태</b>가 일어날 수 있는 지역에 가까이 가지 않습니다. \n\n
        •  물에 잠긴 지역에서 <b>자동차</b>를 운전하지 않습니다. \n\n
        •  지정된 대피소에 도착하면 반드시 <b>도착사실</b>을 알리고, 통제에 따라 행동합니다.\n\n
        •  침수주택 가스·전기차단기, 수돗물이나 저장식수 등은 <b>안전조사가 끝난 후 사용</b>이 가능합니다.</string>
    <string name="info_tv_prevention">예방법</string>
    <string name="info_tab_basic">기본</string>
    <string name="info_tab_addl">추가물품</string>
    <string name="info_tab_mine">나의 리스트</string>
    <string name="disclaimer">disclaimer</string>
    <string name="ellipseSix">ellipseSix</string>
    <string name="ellipseFive">ellipseFive</string>
    <string name="ellipseFour">ellipseFour</string>
    <string name="ellipseThree">ellipseThree</string>
    <string name="ellipseTwo">ellipseTwo</string>
    <string name="ellipseOne">ellipseOne</string>
</resources>