<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="24dp"
                android:paddingRight="24dp">

                <LinearLayout
                    android:id="@+id/info_iv_cpr_desc_numbering"
                    android:layout_width="24dp"
                    android:layout_height="2340dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="474dp"
                        android:contentDescription="@string/ellipseOne"
                        android:src="@drawable/ic_ellipse_1" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="319dp"
                        android:contentDescription="@string/ellipseTwo"
                        android:src="@drawable/ic_ellipse_2" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="354dp"
                        android:contentDescription="@string/ellipseThree"
                        android:src="@drawable/ic_ellipse_3" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="413dp"
                        android:contentDescription="@string/ellipseFour"
                        android:src="@drawable/ic_ellipse_4" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="423dp"
                        android:contentDescription="@string/ellipseFive"
                        android:src="@drawable/ic_ellipse_5" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="189dp"
                        android:contentDescription="@string/ellipseSix"
                        android:src="@drawable/ic_ellipse_6" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/disclaimer"
                        android:src="@drawable/ic_disclaimer" />

                </LinearLayout>

                <Space
                    android:layout_width="12dp"
                    android:layout_height="2340dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/info_tv_cpr_step1_header"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/h3height"
                        android:text="@string/info_tv_cpr_step1_header"
                        android:textAppearance="@style/Head3" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="32dp" />

                    <ImageView
                        android:id="@+id/info_iv_cpr_step1"
                        android:layout_width="165dp"
                        android:layout_height="140dp"
                        android:contentDescription="@string/info_iv_cpr_step1"
                        android:src="@drawable/info_iv_cpr_step1" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="16dp" />

                    <TextView
                        android:id="@+id/info_tv_cpr_step1_1"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/b1_double_line"
                        android:text="@string/info_tv_cpr_step1_1"
                        android:textAppearance="@style/Body1_26" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/p_single_space" />

                    <TextView
                        android:id="@+id/info_tv_cpr_step1_2"
                        android:layout_width="match_parent"
                        android:layout_height="19dp"
                        android:text="@string/info_tv_cpr_step1_2"
                        android:textAppearance="@style/Body1"
                        android:textColor="@color/red" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/p_single_space" />

                    <TextView
                        android:id="@+id/info_tv_cpr_step1_3"
                        android:layout_width="match_parent"
                        android:layout_height="104dp"
                        android:text="@string/info_tv_cpr_step1_3"
                        android:textAppearance="@style/Body1_26" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="81dp" />

                    <TextView
                        android:id="@+id/info_tv_cpr_step2_header"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/h3height"
                        android:text="@string/info_tv_cpr_step2_header"
                        android:textAppearance="@style/Head3" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/p_double_space" />

                    <ImageView
                        android:id="@+id/info_iv_cpr_step2"
                        android:layout_width="165dp"
                        android:layout_height="140dp"
                        android:contentDescription="@string/info_iv_cpr_step2"
                        android:src="@drawable/info_iv_cpr_step2" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/p_single_space" />

                    <TextView
                        android:id="@+id/info_tv_cpr_step2"
                        android:layout_width="match_parent"
                        android:layout_height="52dp"
                        android:text="@string/info_tv_cpr_step2"
                        android:textAppearance="@style/Body1_26" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="81dp" />

                    <TextView
                        android:id="@+id/info_tv_cpr_step3"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/h3height"
                        android:text="@string/info_tv_cpr_step3_header"
                        android:textAppearance="@style/Head3" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/p_double_space" />

                    <ImageView
                        android:id="@+id/info_iv_cpr_step3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/info_iv_cpr_step3"
                        android:src="@drawable/info_iv_cpr_step3" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/p_single_space" />

                    <TextView
                        android:id="@+id/info_tv_cpr_step3_1"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/b1_double_line"
                        android:text="@string/info_tv_cpr_step3_1"
                        android:textAppearance="@style/Body1_26" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/p_single_space" />

                    <TextView
                        android:id="@+id/info_tv_cpr_step3_2"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/b1_single_space"
                        android:text="@string/info_tv_cpr_step3_2"
                        android:textAppearance="@style/Body1"
                        android:textColor="@color/red" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="81dp" />

                    <TextView
                        android:id="@+id/info_tv_cpr_step4_header"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/h3height"
                        android:text="@string/info_tv_cpr_step4_header"
                        android:textAppearance="@style/Head3" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/p_double_space" />

                    <ImageView
                        android:id="@+id/info_iv_cpr_step4"
                        android:layout_width="165dp"
                        android:layout_height="140dp"
                        android:contentDescription="@string/info_iv_cpr_step4"
                        android:src="@drawable/info_iv_cpr_step4" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/p_single_space" />

                    <TextView
                        android:id="@+id/info_tv_cpr_step4"
                        android:layout_width="match_parent"
                        android:layout_height="78dp"
                        android:text="@string/info_tv_cpr_step4"
                        android:textAppearance="@style/Body1_26" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/p_single_space" />

                    <TextView
                        android:id="@+id/info_tv_cpr_step4_2"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/b1_double_line"
                        android:text="@string/info_tv_cpr_step4_2"
                        android:textAppearance="@style/Body1_26"
                        android:textColor="@color/red" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="81dp" />

                    <TextView
                        android:id="@+id/info_tv_cpr_step5_header"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/h3height"
                        android:text="@string/info_tv_cpr_step5_header"
                        android:textAppearance="@style/Head3" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/p_double_space" />

                    <ImageView
                        android:id="@+id/info_iv_cpr_step5"
                        android:layout_width="165dp"
                        android:layout_height="140dp"
                        android:contentDescription="@string/info_iv_cpr_step5"
                        android:src="@drawable/info_iv_cpr_step5" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/p_single_space" />

                    <TextView
                        android:id="@+id/info_tv_cpr_step5"
                        android:layout_width="match_parent"
                        android:layout_height="156dp"
                        android:text="@string/info_tv_cpr_step5" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="81dp" />

                    <TextView
                        android:id="@+id/info_tv_cpr_step6_header"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/h3height"
                        android:text="@string/info_tv_cpr_step6_header"
                        android:textAppearance="@style/Head3" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/p_double_space" />

                    <TextView
                        android:id="@+id/info_tv_cpr_step6"
                        android:layout_width="match_parent"
                        android:layout_height="78dp"
                        android:text="@string/info_tv_cpr_step6"
                        android:textAppearance="@style/Body1_26" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="81dp" />

                    <TextView
                        android:id="@+id/info_tv_cpr_caution_header"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/h3height"
                        android:text="@string/info_tv_cpr_caution_header"
                        android:textAppearance="@style/Head3" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/p_double_space" />

                    <TextView
                        android:id="@+id/info_tv_cpr_caution"
                        android:layout_width="match_parent"
                        android:layout_height="78dp"
                        android:text="@string/info_tv_cpr_caution"
                        android:textAppearance="@style/Body1_26" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="88dp" />

                    <TextView
                        android:id="@+id/info_tv_cpr_summaryH"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/h3height"
                        android:text="@string/info_tv_cpr_summaryH"
                        android:textAppearance="@style/Head3" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="32dp" />

                    <TextView
                        android:id="@+id/info_tv_cpr_summary1"
                        android:layout_width="match_parent"
                        android:layout_height="182dp"
                        android:text="@string/info_tv_cpr_summary1"
                        android:textAppearance="@style/Body1_26" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="24dp" />

                    <TextView
                        android:id="@+id/info_tv_cpr_summary2H"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/h3height"
                        android:fontFamily="@font/spoqa_han_sans_neo_bold"
                        android:text="@string/info_tv_cpr_summary2H"
                        android:textAppearance="@style/Head3" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="8dp" />

                    <TextView
                        android:id="@+id/info_tv_cpr_summary2"
                        android:layout_width="match_parent"
                        android:layout_height="104dp"
                        android:text="@string/info_tv_cpr_summary2"
                        android:textAppearance="@style/Body1_26" />


                </LinearLayout>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="88dp" />

            <TextView
                android:id="@id/info_iv_copyright"
                android:layout_width="341dp"
                android:layout_height="14dp"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:gravity="center_horizontal|top"
                android:text="@string/info_iv_copyright"
                android:textColor="#979797"
                android:textSize="12sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="64dp" />
        </LinearLayout>


    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>