<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/iv_bar_design"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:src="@drawable/info_iv_bar_design"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/layout_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_bar_design">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/default_padding"
            android:paddingRight="@dimen/default_padding">
            <TextView
                android:id="@+id/info_tv_earthquake_header"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:gravity="center_vertical"
                style="@style/disaster"
                android:text="@string/info_tb_earthquake"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="36dp"/>
            <ImageView
                android:id="@+id/info_btn_wheninside"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/info_btn_wheninside"
                android:contentDescription="@string/info_tv_wheninside"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="32dp"/>
            <TextView
                android:id="@+id/info_tv_earthquake_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="29dp"
                android:textSize="18sp"
                android:letterSpacing="-0.02"
                android:textColor="@color/gray600"
                android:fontFamily="@font/spoqa_han_sans_neo_bold"
                android:translationY="-3.6sp"
                android:lineSpacingExtra="7sp"
                android:gravity="top"
                android:text="@string/info_tv_earthquake_subtitle"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="23dp"/>
            <TextView
                android:id="@+id/info_tv_earthquake_body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/disaster_body"
                android:text="@string/info_tv_earthquake_body"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="88dp"/>
            <ImageView
                android:id="@+id/info_btn_whenoutside"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:src="@drawable/info_btn_whenoutside"
                android:contentDescription="@string/info_tv_whenoutside"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="32dp"/>
            <TextView
                android:id="@+id/info_tv_earthquake_body2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/disaster_body"
                android:text="@string/info_tv_earthquake_body2"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>