<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayoutChecklist"
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        app:tabGravity="center"
        app:tabMode="fixed"
        app:tabTextColor="@color/gray400"
        app:tabSelectedTextColor="@color/gray600"
        app:tabTextAppearance="@style/Body1"
        android:layout_alignParentTop="true"
        >
        <com.google.android.material.tabs.TabItem
            android:layout_width="30dp"
            android:layout_height="19dp"
            android:text="@string/info_tab_basic"/>
        <com.google.android.material.tabs.TabItem
            android:layout_width="58dp"
            android:layout_height="19dp"
            android:text="@string/info_tab_addl"/>
        <com.google.android.material.tabs.TabItem
            android:layout_width="76dp"
            android:layout_height="19dp"
            android:text="@string/info_tab_mine"/>
    </com.google.android.material.tabs.TabLayout>
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/tabContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tabLayoutChecklist"/>

</RelativeLayout>